# ninotnc-ble

./: .gitmodules  LICENSE  README.md  git_rev_macro.py  platformio.ini  pre_extra_script.py
board/: NinoTNC BLE.brd  NinoTNC BLE.sch
firmware/: CMakeLists.txt  TODO.md  aprs.h  ax25.h  bt.h  config.h  kiss.c  kiss.h  logger.c  oled.c  pconfig.h  shell.h  ssd1306_font.h
firmware/passthru/: CMakeLists.txt  passthru.c  passthru.h
firmware/tests/: munit.h  test_ax25.c  test_kiss.c  test_shell.c
include/: BM70.h  blink.h  config.h  debug.h  kiss.h  ring.h  timer1.h  utils.h
pcb/rev5/: NinoBLE Rev5.kicad_pcb  NinoBLE Rev5.kicad_pro  NinoBLE Rev5.kicad_sch  README.md
pcb/rev5/fabrication/: bom.csv  designators.csv  positions.csv
src/: BM70.cpp  aprs.c  aprs.h  ax25.c  ax25.h  blink.h  bt.c  btstack_config.h  config.h  kiss.cpp  logger.h  main.cpp  main_aprs.c  main_sniffer.c  ninoble_gatt_services.gatt  oled.h  pconfig.c  sd_config.c  shell.c  timer1.cpp
src/passthru/: passthru.c
src/tests/: CMakeLists.txt  Makefile  test_ax25.c  test_passthru.c
src/tests/pico/: multicore.h  mutex.h
